--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta name="description" content="Sistema Makarios - Gestão de Estoque e Produção" />
+    <meta name="theme-color" content="#2563eb" />
+    <title>Makarios - Gestão de Estoque</title>
   </head>
   <body>
     <div id="root"></div>
